# sxSNF

./: .gitignore  LICENSE  README.md  beamerthemesintef.sty  beamerthemesintef43.sty  chinese_fix.tex  clean.sh  compile.sh  cursorrules.txt  graph_module.py  main.py  md_sxSNF.md  model.py  models.py  pyproject.toml  requirements.txt  run_simulation.sh  simulate_sxSNF.py  sintefcolor.sty  slide43_sxSNF.tex  train.py  utils.py
.github/workflows/: pages.yml  pydoc.yml
datasets/: 10x-Multiome-Pbmc10k-ATAC.h5ad  10x-Multiome-Pbmc10k-RNA.h5ad  Chen-2019-ATAC.h5ad  Chen-2019-RNA.h5ad
docs/: API_REFERENCE.md  WORKFLOW.md  index.html  workflow.mmd
docs/assets/: docs.css
docs/pydoc/: graph_module.html  main.html  model.html  models.html  simulate_sxSNF.html  sxsnf.clustering.html  sxsnf.config.html  sxsnf.data.html  sxsnf.diagnostics.html  sxsnf.graph.html  sxsnf.models.html  sxsnf.pipeline.html  sxsnf.training.html  sxsnf.utils.html  train.html  utils.html
notebooks/: sxSNF2.0_Chen.ipynb
scripts/: generate_pydoc.py  run_chen2019.py  sync_to_github.sh
sxsnf/: __init__.py  clustering.py  config.py  data.py  diagnostics.py  graph.py  models.py  pipeline.py  training.py  utils.py
tests/: test_imports.py
