[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sxsnf"
version = "0.2.0"
description = "Similarity Network Fusion with self-supervised graph learning for single-cell multi-omics integration"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "sxSNF contributors" }
]
dependencies = [
  "numpy>=1.23",
  "pandas>=1.5",
  "scipy>=1.9",
  "scikit-learn>=1.2",
  "matplotlib>=3.6",
  "torch>=2.0",
  "anndata>=0.9",
  "scanpy>=1.9",
  "scglue>=0.4",
  "leidenalg>=0.10",
  "igraph>=0.10",
  "umap-learn>=0.5"
]

[project.scripts]
sxsnf-chen2019 = "scripts.run_chen2019:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["sxsnf*"]
